# ML2025Spring_NTU_HUNG-YI-LEE-Professor

./: .gitignore  HW1_AI Agent1 -- RAG  README.md
HW1_AI Agent1--RAG/: .gitignore  20250707.csv  HW1_AI Agent1 -- RAG.ipynb  README.md  environment.yml  pyproject.toml  requirements.txt
HW1_AI Agent1--RAG/scripts/: download_assets.sh  setup_env.sh  setup_env_traditional.sh
